fixed sidebar covering part of the page

--- a/src/style/navbar.less
+++ b/src/style/navbar.less
@@ -196,7 +196,14 @@ nav {
     }
 }
 
+#nav-sidebar{
+    display: none !important;
+}
+
 @media only screen and (max-width: 800px) {
+    #nav-sidebar{
+        display: block !important;
+    }
     nav {
         .logo {
             width: 200px;
